--- a/changelog.html
+++ b/changelog.html
@@ -587,7 +587,7 @@ Upcoming changes</a>
     If reload fails, don't let the partially loaded state running, or risk the user overwriting the configs they have.
     (<a href="https://issues.jenkins-ci.org/browse/JENKINS-11204">issue 11204</a>)
   <li class=rfe>
-    Update center UI improvement. "Install" button is now always visisble.
+    Update center UI improvement. "Install" button is now always visible.
   <li class=rfe>
     Configuration UI improvement. "Save" button is always visible.
   <li class=bug>
@@ -954,7 +954,7 @@ Upcoming changes</a>
     Project names in fingerprint records weren't updated when a project is renamed.
     (<a href="https://issues.jenkins-ci.org/browse/JENKINS-10330">issue 10330</a>)
   <li class=rfe>
-    External job submision now supports &lt;displayName&gt; and &lt;description&gt; elements
+    External job submission now supports &lt;displayName&gt; and &lt;description&gt; elements
     (<a href="https://github.com/jenkinsci/jenkins/pull/215">pull 215</a>)
 </ul>
 <h3><a name=v1.428>What's new in 1.428</a> (2011/08/29)</h3>
@@ -1015,7 +1015,7 @@ Upcoming changes</a>
     Improved the remote API for queue
     (<a href="https://issues.jenkins-ci.org/browse/JENKINS-10414">issue 10414</a>)
   <li class=rfe>
-    Added a dignosis CLI command to report the current granted authorities.
+    Added a diagnosis CLI command to report the current granted authorities.
   <li class=rfe>
     Added a CLI command to set display name of the build
     (<a href="https://issues.jenkins-ci.org/browse/JENKINS-9126">issue 9126</a>)
